--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </header>
 <main>
     <h2 id="brushes">Brushes</h2>
-    <img src="file:///C:/Users/Nick's%20Laptop/Pictures/Project%20Images/Dasmoto's-brushes.webp"/>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg"/>
     <h3>Hacksaw Brushes</h3>
     <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
     <h2 id="frames">Frames</h2>
@@ -21,4 +21,4 @@
     <h3>Clean Finnish Paint</h3>
     <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="price">Starting at $5.00 / tube.</span></p>
 </main>
-</body>
+</body>"
