#brushes src change 2
I changed the src for #brushes back to "file:///C:/Users/Nick's%20Laptop/Pictures/Project%20Images/Dasmoto's-brushes.webp", because the initial change had no effect.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </header>
 <main>
     <h2 id="brushes">Brushes</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg"/>
+    <img src="file:///C:/Users/Nick's%20Laptop/Pictures/Project%20Images/Dasmoto's-brushes.webp"/>
     <h3>Hacksaw Brushes</h3>
     <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
     <h2 id="frames">Frames</h2>
